--- a/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
+++ b/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
@@ -16,7 +16,7 @@
 
                             <div class="col-md-12 searchResultsAmenitiesDiv">
                                 <input style="font-size:14px;" type="text"
-                                    placeholder="Please type here to choose address..." v-model.trim="searchAddressText"
+                                    placeholder="Please type here to choose Apartment Name..." v-model.trim="searchAddressText"
                                     autocomplete="off" v-validate="'required'" name="addressId">
                             </div>
                             <div class="form-control searchResultsAmenities" @click="$event.stopPropagation()"
@@ -29,11 +29,11 @@
                                 </ul>
                             </div>
                             <span v-show="errors.has('addressId')" class="invalid-feedback">
-                                <i v-show="errors.has('addressId')" class="fa fa-warning"></i> Please choose
-                                address</span>
+                                <i v-show="errors.has('addressId')" class="fa fa-warning"></i> Please select Apartment Name
+                            </span>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Vehicle Name"
+                            <input type="text" class="form-control" placeholder="Vehicle Nick Name Eg: My Car"
                                 v-model="newVehicleDetails.VehicleName">
                         </div>
                         <div class="form-group">
