--- a/WebClient/src/components/userModule/userListModule/userListVue.template.html
+++ b/WebClient/src/components/userModule/userListModule/userListVue.template.html
@@ -113,6 +113,9 @@
             <div class="dCell EMAIL" v-if="headerColumnList.EMAIL.IsChecked">
               <strong>{{inst.RoleName}}</strong>
             </div>
+            <div class="dCell EMAIL" v-if="headerColumnList.CreatedDate.IsChecked">
+              <strong>{{getFormattedDate(inst.CreatedOn)}}</strong>
+            </div>
           </div>
         </div>
       </div>
