--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -32,7 +32,7 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade" v-for="banner in bannerImages">                    
-                    <img :src="banner.Image" style="width:100%; height:230px">
+                    <img :src="banner.ImageUrl" style="width:100%; height:230px">
                     <!-- <div class="text">Caption Text</div> -->
                 </div>
 
