--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4" v-if="selectedTab == 2">
+                <div class="col-md-4" v-if="selectedTab == 4">
                     <select class="form-control" v-model="pendingServiceFilter.PersonId">
                         <option value=null>--Select Service Person--</option>
                         <option v-for="person in servicePerons" :value="person.UserId">
@@ -38,6 +38,9 @@
                         :value="pendingServiceFilter.ServiceDate" :format="'Do MMM YYYY'" :onUpdate="updateServiceDate"
                         :pickerType="'date'">
                     </datePickerComponent>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" class="form-control" v-model="pendingServiceFilter.MobileNumber" >
                 </div>
                 <div class="col-md-2">
                     <button class="btn btn-success btn-sm" @click="getRequestedServices">Search</button>
