--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -179,7 +179,7 @@
                     <label>
                         Time Slot
                     </label>
-                    <select v-model="vehicleInfo.TimeSlot" class="form-control">
+                    <select v-model="vehicleInfo.TimeSlot" class="form-control" v-if="false">
                         <option value="1">6:00 AM - 8:00 AM</option>
                         <option value="2">8:00 AM - 10:00 AM</option>
                         <option value="3">10:00 AM - 12:00 PM</option>
@@ -189,7 +189,24 @@
                         <option value="7">6:00 PM - 8:00 PM</option>
                         <option value="8">8:00 PM - 10:00 PM</option>
                     </select>
+                    <div class="flex-wrapper">
+                        <div class="radioPadg" v-for="timeslot in timeslots">
+                            <label v-if="serviceDetail.serviceTimeslots.indexOf(timeslot.TimeSlotId) > -1">
+                                <input type="radio" name="serviceTimeSlot" :value="timeslot.TimeSlotId"
+                                    v-model="vehicleInfo.TimeSlot" v-validate="'required'" style="display: none;">
 
+                                <button :disabled="!timeslot.available"
+                                    v-bind:class="['btn-default custom-bbtn', vehicleInfo.TimeSlot == timeslot.TimeSlotId ? 'active': '']"
+                                    @click="selectTimeSlot(timeslot)">{{getFormatedTime(timeslot.StartTime) + ' - ' + getFormatedTime(timeslot.EndTime)}}</button>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group" v-if="serviceType == 2 && errors.has('serviceTimeSlot')">
+                    <span v-show="errors.has('serviceTimeSlot')" class="invalid-feedback">
+                        <i v-show="errors.has('serviceTimeSlot')" class="fa fa-warning"></i>
+                        Please select Time Slot
+                    </span>
                 </div>
 
                 <div class="row" v-if="serviceType == 1">
@@ -322,7 +339,7 @@
                             <label>
                                 Time Slot
                             </label>
-                            <select v-model="vehicleInfo.TimeSlot" class="form-control">
+                            <select v-model="vehicleInfo.TimeSlot" class="form-control" v-if="false">
                                 <option value="1">6:00 AM - 8:00 AM</option>
                                 <option value="2">8:00 AM - 10:00 AM</option>
                                 <option value="3">10:00 AM - 12:00 PM</option>
@@ -332,10 +349,26 @@
                                 <option value="7">6:00 PM - 8:00 PM</option>
                                 <option value="8">8:00 PM - 10:00 PM</option>
                             </select>
-
+                            <div class="flex-wrapper" style="float: left;">
+                                <div class="radioPadg" v-for="timeslot in timeslots"  v-if="serviceDetail.serviceTimeslots.indexOf(timeslot.TimeSlotId) > -1">
+                                    <label>
+                                        <input type="radio" name="serviceTimeSlot" :value="timeslot.TimeSlotId"
+                                            v-model="vehicleInfo.TimeSlot" v-validate="'required'"
+                                            style="display: none;">
+                                        <button  :disabled="!timeslot.available" 
+                                            v-bind:class="['btn-default custom-bbtn', vehicleInfo.TimeSlot == timeslot.TimeSlotId ? 'active': '', timeslot.available ? 'timeslotAvail': 'timeslotNotAvail']"
+                                            @click="selectTimeSlot(timeslot)">{{getFormatedTime(timeslot.StartTime) + ' - ' + getFormatedTime(timeslot.EndTime)}}</button>
+                                    </label>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="form-group">
+                        <div class="form-group" v-if="errors.has('serviceTimeSlot')">
+                            <span v-show="errors.has('serviceTimeSlot')" class="invalid-feedback">
+                                <i v-show="errors.has('serviceTimeSlot')" class="fa fa-warning"></i>
+                                Please select Time Slot
+                            </span>
+                        </div>
+                        <div class="form-group" v-if="false">
                             <label>
                                 Promo Code
                             </label>
@@ -445,8 +478,10 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-success btn-sm pull-right" v-if="rechargeVisible" title="Recharge" @click="navigateToRecharge">Recharge</button>
-                        <button class="btn btn-success btn-sm pull-right" title="OK" @click="closeToastrPopup">OK</button>
+                        <button class="btn btn-success btn-sm pull-right" v-if="rechargeVisible" title="Recharge"
+                            @click="navigateToRecharge">Recharge</button>
+                        <button class="btn btn-success btn-sm pull-right" title="OK"
+                            @click="closeToastrPopup">OK</button>
                     </div>
 
                 </div>
